Fix border clipping problem

--- a/src/BloomBrowserUI/bookEdit/css/editMode.less
+++ b/src/BloomBrowserUI/bookEdit/css/editMode.less
@@ -303,6 +303,8 @@ TEXTAREA.province
 		height: 34px;
 		margin: 0 -8px;
 		background-color: @TabColor;
+		border-top-right-radius: 15px;
+		border-top-left-radius: 15px;
 		> UL {
 			z-index: 1;
 			background-color: transparent;
@@ -330,6 +332,13 @@ TEXTAREA.province
 				float: left;
 				flex: none;
 				background-color: @TabColor;
+				&:not(:first-child) {
+					border-left: 1px solid @TabBorder;
+					border-top-left-radius: 6px;
+				}
+				&:first-child {
+					border-top-left-radius: 15px; // needed to overcome gecko bug
+				}
 				&.active {
 					background-color: @SelectedTabColor;
 					border-bottom-color: @SelectedTabColor; // make active tab appear in front
@@ -351,7 +360,7 @@ TEXTAREA.province
 					}
 					&:hover {
 						text-decoration: underline;
-						background-color: @SelectedTabColor;
+						background-color: @SelectedTabColor transparent;
 					}
 				}
 			}
@@ -398,7 +407,7 @@ TEXTAREA.province
 }
 .dropdown-menu {
 	width: 32px;
-	border-right: none !important;
+	border: none !important;
 	&:hover {
 		background-color: @DropdownHovered;
 		UL {
